--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@
 		-ms-transform: translate3d(0,0,0);
 		transform: translate3d(0,0,0);
 		background-color: #348cb2;
-		background-image: url("images/bg.jpg");
+		background-image: url("https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/images/bg.jpg");
 		background-position: bottom left;
 		background-repeat: repeat-x;
 		height: 100%;
@@ -119,7 +119,7 @@
 		-ms-animation: overlay 1.5s 1.5s forwards;
 		animation: overlay 1.5s 1.5s forwards;
 		background-attachment: fixed, fixed;
-		background-image: url("images/overlay-pattern.png"), url("images/overlay.svg");
+		background-image: url("https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/images/overlay-pattern.png"), url("https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/images/overlay.svg");
 		background-position: top left, center center;
 		background-repeat: repeat, no-repeat;
 		background-size: auto, cover;
